--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"bootstrap": "^4.3.1",
 		"jquery": "^3.3.1",
 		"popper.js": "^1.14.7",
+		"prop-types": "^15.7.2",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
 		"react-router": "^5.0.0",
@@ -31,6 +32,7 @@
 	],
 	"devDependencies": {
 		"@babel/core": "^7.4.0",
+		"@babel/plugin-proposal-class-properties": "^7.4.0",
 		"@babel/preset-env": "^7.4.1",
 		"@babel/preset-react": "^7.0.0",
 		"babel-loader": "^8.0.5",
