--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^1.2.16",
-		"@fortawesome/free-solid-svg-icons": "^5.8.0",
+		"@fortawesome/fontawesome-svg-core": "^1.2.21",
+		"@fortawesome/free-solid-svg-icons": "^5.10.1",
 		"@fortawesome/react-fontawesome": "^0.1.4",
+		"@webpack-cli/init": "^0.2.2",
 		"bootstrap": "^4.3.1",
-		"jquery": "^3.3.1",
-		"popper.js": "^1.14.7",
+		"jquery": "^3.4.1",
+		"popper.js": "^1.15.0",
 		"prop-types": "^15.7.2",
-		"react": "^16.8.4",
-		"react-dom": "^16.8.4",
-		"react-router": "^5.0.0",
-		"react-router-dom": "^5.0.0",
+		"react": "^16.9.0",
+		"react-dom": "^16.9.0",
+		"react-router": "^5.0.1",
+		"react-router-dom": "^5.0.1",
 		"react-scripts": "2.1.8"
 	},
 	"scripts": {
@@ -31,20 +32,20 @@
 		"not op_mini all"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.4.0",
-		"@babel/plugin-proposal-class-properties": "^7.4.0",
-		"@babel/preset-env": "^7.4.1",
+		"@babel/core": "^7.5.5",
+		"@babel/plugin-proposal-class-properties": "^7.5.5",
+		"@babel/preset-env": "^7.5.5",
 		"@babel/preset-react": "^7.0.0",
-		"babel-loader": "^8.0.5",
+		"babel-loader": "^8.0.6",
 		"css-loader": "^2.1.1",
 		"font-awesome": "^4.7.0",
 		"html-webpack-plugin": "^3.2.0",
 		"mini-css-extract-plugin": "^0.5.0",
-		"node-sass": "^4.11.0",
-		"sass-loader": "^7.1.0",
+		"node-sass": "^4.12.0",
+		"sass-loader": "^7.2.0",
 		"style-loader": "^0.23.1",
-		"webpack": "^4.29.6",
-		"webpack-cli": "^3.3.0",
-		"webpack-dev-server": "^3.2.1"
+		"webpack": "^4.39.2",
+		"webpack-cli": "^3.3.7",
+		"webpack-dev-server": "^3.8.0"
 	}
 }
